<resources>
    <string name="app_name">Gallery</string>
    <string name="stop">Stop</string>
    <string name="continous">Continue</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="backup">Backup</string>
    <string name="hidealbum">Hide</string>
    <string name="trashalbum">Trash</string>
    <string name="favouritealbum">Favourite</string>
    <string name="information">Information</string>
    <string name="compress_image">Compress</string>
    <string name="add_to_album">Add into album</string>
    <string name="description">Description:</string>
    <string name="hide">Hide</string>
    <string name="set_as_wall">Set as wallpaper</string>
    <string name="read_text">Read characters</string>
    <string name="delete">Delete</string>
    <string name="restore">Restore</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="gallery">Gallery</string>
    <string name="album">Album</string>
    <string name="settings">Settings</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="cut_and_rotate">Cut/Rotate</string>
    <string name="light_up">Light up</string>
    <string name="constract">Constract</string>
    <string name="filter">Filter</string>
    <string name="draw">Draw</string>
    <string name="save">Save</string>
    <string name="select_multi">Select multi-image</string>
    <string name="slideshow">Slide show</string>
    <string name="statistic">Statistic</string>
    <string name="new_album">New album</string>
    <string name="delete_album">Delete album</string>
    <string name="notice_trash_fragment">Image in trash bin will be deleted after 30 days</string>
    <string name="copy">Copy</string>
    <string name="time_between_slide">Image transition time</string>
    <string name="time_between_slide_not">Invalid transition time</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="capacity">Capacity</string>
    <string name="size">Size</string>
    <string name="position">Position</string>
    <string name="delete_this_album">Delete this album?</string>
    <string name="create_password_hide">Create Password-Hide Folder</string>
    <string name="type_password">Type password</string>
    <string name="retype_password">Retype password</string>
    <string name="album_name">Album name</string>
    <string name="hide_folder">Hide folder</string>
    <string name="reset">Reset</string>
    <string name="cannot_add">Cannot add</string>
    <string name="existed_cannot_add">There was an image has the same name, cannot add.</string>
    <string name="selected">Selected</string>
    <string name="days">days</string>
    <string name="remaining">Remaining</string>
    <string name="enter_album_name">Please enter album name</string>
    <string name="album_existed">Album existed</string>
    <string name="save_imahe_edit">Save image edit</string>
    <string name="add_image_from_link">Add image from link</string>
    <string name="enter_link">Enter link</string>
    <string name="downloading">Downloading</string>
    <string name="cannot_delete">Cannot delete</string>
    <string name="cannot_unhide">Cannot unhide</string>
    <string name="nothing_to_slide_show">Nothing to slide show</string>
    <string name="enter_time">Enter time trasition</string>
    <string name="select_screen">Choose screen to set wallpaper</string>
    <string name="lock_screen">Lock screen</string>
    <string name="main_screen">Main screen</string>
    <string name="lock_screen_fail">Lock screen wallpaper not supported</string>
    <string name="lock_screen_success">Setting Lockscreen\'s Wallpaper Successfully!!</string>
    <string name="home_screen_fail">Setting HomeScreen\'s Wallpaper Failed!!</string>
    <string name="home_screen_success">Setting HomeScreen\'s Wallpaper Successfully!!</string>
    <string name="no_album_found">No album found</string>
    <string name="cannot_hide">Cannot hide this image</string>
    <string name="move">Move</string>
    <string name="move_to_trash">Move to trash</string>
    <string name="delete_photo_success">Delete photo successfully</string>
    <string name="cannot_delete_photo">Cannot delete photo</string>
    <string name="trash_bin">Trash bin</string>
    <string name="saved">Saved</string>
    <string name="download_notice_fail">Cannot save, check your internet</string>
    <string name="download">Download</string>
    <string name="save_edit_success">Successfully save Edited Image</string>
    <string name="read_text_from_iamge">Read Text From Image</string>
    <string name="copied">Copied</string>
    <string name="restore_success">Restore the image successfully</string>
    <string name="cannot_restore">Cannot restore the image</string>
    <string name="permannently_delete">Permanently delete the image</string>
    <string name="permanently_not_delete">Cannot permanently delete the image</string>
    <string name="comebacklater">Comeback later, in reset countdown</string>
    <string name="permission_granted">Permission granted!</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="images">Image</string>
    <string name="wrong_password">Wrong password</string>
    <string name="retype_password_not_match">Retype password not match</string>
    <string name="event">Event</string>
    <string name="notice_date">Notice date</string>
    <string name="visit_our_app">Visit Gallery to watch your anniversary</string>
    <string name="clear">Clear</string>
    <string name="schedule">Scheduled</string>
    <string name="invalid_time">Invalid time</string>
    <string name="location">Location:</string>
    <string name="addLocation">Add location</string>
    <string name="loadGGMap">Loading Google Map</string>
    <string name="addLocationSuccess">Add location success</string>
    <string name="onCancelLocation">Remove location success</string>
    <string name="QRCode">QR Scanner</string>
    <string name="noQR">This photo does not have a QR code or QR code does not have content</string>
    <string name="noBitmap">This photo does not have bitmap</string>
    <string name="moveToTrash">Move photos to the trash bin…</string>
    <string name="restoreFromTrash">Restore photos from the trash bin…</string>
    <string name="deleteFromTrash">Delete photos from the trash bin…</string>
    <string name="add_to_album_success">Add photo to album successfully</string>
    <string name="copyMultiToAlbum">Copy photos to album folder…</string>
    <string name="lastModified">Last Modified: </string>
    <string name="takenDate">Date Taken: </string>
    <string name="resolution">Resolution: </string>
    <string name="exif">EXIF: </string>
    <string name="camera">Camera: </string>
    <string name="path">Path: </string>
    <string name="save_description_success">Save description successfully!</string>
    <string name="InfoDialogTitle">INFORMATION</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_edit">Edit</string>
    <string name="sort">Sort</string>
    <string name="sortByDateIncrease">By date (increase)</string>
    <string name="sortByDateDecrease">By date (decrease)</string>
    <string name="sortByNameIncrease">By name (increase)</string>
    <string name="sortByNameDecrease">By name (decrease)</string>
    <string name="sortByFileSizeIncrease">By file size (increase)</string>
    <string name="sortByFileSizeDecrease">By file size (decrease)</string>
    <string name="same_as_system">Same as system</string>
    <string name="add_img_from_camera">Add image from camera</string>
    <string name="no_internet_found">No Internet!</string>
    <string name="load_camera_img">Saving image</string>
    <string name="no_images">No image selected!</string>
    <string name="APIKEY">AIzaSyCOluiC-bAA6BIizeAf5OgUd3JVqzdTn38</string>
    <string name="text_to_image">Text To Image</string>
    <string name="delete_duplicate_image">Delete duplicate images</string>
    <string name="search_here">Search here</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>
