<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/btnTheme"
        android:checked="true"
        android:title="@string/theme">
        <menu>
            <item
                android:id="@+id/btnThemeLight"
                android:checked="true"
                android:title="@string/light"/>
            <item
                android:id="@+id/btnThemeDark"
                android:checked="true"
                android:title="@string/dark"/>
        </menu>
    </item>
    <item
        android:id="@+id/btnLanguage"
        android:checked="true"
        android:title="@string/language">
        <menu>
            <item
                android:id="@+id/btnEnglish"
                android:checked="true"
                android:title="@string/english"/>
            <item
                android:id="@+id/btnVietnamese"
                android:checked="true"
                android:title="@string/vietnamese"/>
        </menu>
    </item>
    <item
        android:id="@+id/btnBackup"
        android:checked="true"
        android:title="@string/backup"/>
    <item
        android:id="@+id/btnShowHideFrag"
        android:checked="true"
        android:title="@string/hidealbum"/>
    <item
        android:id="@+id/btnTrashbin"
        android:checked="true"
        android:title="@string/trashalbum"/>
    <item
        android:id="@+id/btnFavouriteImg"
        android:checked="true"
        android:title="@string/favouritealbum"/>
</menu>