<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/btnSelectAllInTrash"
        android:checked="true"
        app:showAsAction="never"
        android:title="@string/select_all"/>
    <item
        android:id="@+id/btnDeselectAllInTrash"
        android:checked="true"
        app:showAsAction="never"
        android:title="@string/deselect_all"/>
    <item
        android:id="@+id/btnRemoveMultiFromTrash"
        android:checked="true"
        app:showAsAction="never"
        android:title="@string/delete" />
    <item
        android:id="@+id/btnRestoreMultiFromTrash"
        android:checked="true"
        app:showAsAction="never"
        android:title="@string/restore"/>
</menu>