<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_rectangle"
    android:orientation="vertical">
    <TextView
        android:id="@+id/themeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theme"
        android:textSize="25sp"/>
    <RadioGroup
        android:id="@+id/groupTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/btnThemeSameAsSystem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/same_as_system"
            android:textSize="25sp">

        </RadioButton>
        <RadioButton
            android:id="@+id/btnThemeDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark"
            android:textSize="25sp">

        </RadioButton>
        <RadioButton
            android:id="@+id/btnThemeLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light"
            android:textSize="25sp">

        </RadioButton>
    </RadioGroup>
</LinearLayout>