<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_rectangle"
    android:orientation="vertical">
    <TextView
        android:id="@+id/createPasswordHideFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"/>
    <EditText
        android:id="@+id/eventNameEditText"
        android:layout_width="match_parent"
        android:hint="@string/name"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="2dp"
        android:background="?attr/colorOnSecondary"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"/>
    <EditText
        android:id="@+id/eventDescriptionEditText"
        android:layout_width="match_parent"
        android:hint="@string/description"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="2dp"
        android:background="?attr/colorOnSecondary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/eventDateNotice"
            android:layout_width="wrap_content"
            android:hint="@string/notice_date"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:editable="false"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChooseCalendar"
            android:layout_marginStart="20dp"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_calendar_month_24"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="2dp"
        android:background="?attr/colorOnSecondary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnSaveEvent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btnEventCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/black"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnEventClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"/>
</LinearLayout>