<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_rectangle"
    android:orientation="vertical">
    <TextView
        android:id="@+id/languageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textSize="25sp"/>
    <RadioGroup
        android:id="@+id/groupLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/btnEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textSize="25sp">

        </RadioButton>
        <RadioButton
            android:id="@+id/btnVietnamese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vietnamese"
            android:textSize="25sp">

        </RadioButton>
    </RadioGroup>
</LinearLayout>