<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_rectangle"
    android:orientation="vertical">
    <TextView
        android:id="@+id/createPasswordHideFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_password_hide"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/createPasswordEditText1"
        android:layout_width="match_parent"
        android:hint="@string/type_password"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="2dp"
        android:background="?attr/colorOnSecondary"/>
    <EditText
        android:id="@+id/createPasswordEditText2"
        android:layout_width="match_parent"
        android:hint="@string/retype_password"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="2dp"
        android:background="?attr/colorOnSecondary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnOKCreatePassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="OK"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btnCancelCreatePassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/black"/>
    </LinearLayout>

</LinearLayout>